fixed spacing

--- a/styles.css
+++ b/styles.css
@@ -22,10 +22,10 @@ body {
 	display: flex;
 	justify-content: center;
 	flex-direction: column;
-	max-width: 650px;
+	max-width: 700px;
 	padding: 2rem;
 	border-radius: 15px;
-	margin: 5rem 0;
+	margin: 5rem 2rem;
 	background-color: white;
 	gap: 1rem;
 }
@@ -42,27 +42,34 @@ body {
 .recipe-header,
 .recipe-h2 {
 	font-family: 'Young Serif', serif;
-	margin-bottom: 1rem;
 }
 
 .recipe-h2 {
 	color: hsl(332, 51%, 32%);
+    margin-bottom: 1rem;
+    font-size: 1.6rem;
+    font-weight: 600;
+}
+
+.recipe-description {
+    margin-bottom: .75rem;
 }
 
 .recipe-prep {
 	border-radius: 15px;
 	background-color: hsl(330, 100%, 98%);
 	padding: 1.5rem;
+    margin-bottom: 1rem;
 }
 
 ol,
 ul {
-    margin-left: 1rem;
+    margin-left: 1.5rem;
 }
 
 li {
     padding-left: 1rem;
-    padding-bottom: .5rem;
+    padding-bottom: .75rem;
 }
 
 .ul-list-item::marker {
@@ -92,7 +99,7 @@ li {
 }
 
 .bold-text {
-	font-weight: 600;
+	font-weight: 700;
 }
 
 .nutrition-table {
